--- a/design-order.html
+++ b/design-order.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-     <div class="container-top">
+       <div class="container-top change-top">
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
