--- a/about-us.html
+++ b/about-us.html
@@ -61,8 +61,8 @@
                       <li class="">
                         <a href="#contact-us">Contact</a>
                       </li>
-                      <li class="special-btn">
-                        <a href="order.html">Comanda</a>
+                      <li>
+                        <a class="special-btn" href="order.html">Comanda</a>
                       </li>
                     </ul>
                   </div>
