--- a/design-order.html
+++ b/design-order.html
@@ -61,8 +61,8 @@
                       <li class="">
                         <a href="#contact-us">Contact</a>
                       </li>
-                      <li class="special-btn">
-                       <a href="order.html">Comanda</a>
+                      <li>
+                        <a class="special-btn" href="order.html">Comanda</a>
                       </li>
                     </ul>
                   </div>
@@ -160,22 +160,22 @@
               <h6>Culori</h6>
               <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
               <div class="type-of-logo">
-                <span>Alege logo preferat:</span>   
+                <span>Alege logo preferat:</span>
   <label>
      <input type="checkbox" name="" value=""/>
      <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
     <input type="checkbox" name="" value=""/>
      <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
     <input type="checkbox" name="" value=""/>
       <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
      <input type="checkbox" name="" value=""/>
     <img src="https://dummyimage.com/100/000/fff">
@@ -188,7 +188,7 @@
      <input type="checkbox" name="" value=""/>
     <img src="https://dummyimage.com/100/000/fff">
   </label>
-         
+
               </div>
             </div>
             </div>
