--- a/order.html
+++ b/order.html
@@ -1,90 +1,91 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-    <title>2B-studios | Agentie de Web Design</title>
-    <!-- script -->
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="js/typed.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/smooth-scroll.js"></script>
-    <script src="js/bootstrap.main.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/default.css" rel="stylesheet">
-    <link href="css/flexslider.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
-    <link rel='icon' href='images/favicon.ico' >
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="favicon.ico">
+  <title>2B-studios | Agentie de Web Design</title>
+  <!-- script -->
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="js/typed.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/smooth-scroll.js"></script>
+  <script src="js/bootstrap.main.js"></script>
+  <script src="js/jquery.flexslider-min.js"></script>
 
-  </head>
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/default.css" rel="stylesheet">
+  <link href="css/flexslider.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
+  <link rel='icon' href='images/favicon.ico'>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-  <body>
-    <div class="container-top change-top">
-      <div class="top-wrap">
-        <div class="custom-container">
-          <div class="logo">
-            <a href="index.html">
+</head>
+
+<body>
+  <div class="container-top change-top">
+    <div class="top-wrap">
+      <div class="custom-container">
+        <div class="logo">
+          <a href="index.html">
               <img src="images/logo.png" alt="" class="initial-logo">
               <img src="images/logo-nav.png" alt="" class="scrolled-logo">
             </a>
-          </div>
-          <div id="main_nav">
-            <div id="nav">
-              <nav class="navbar navbar-default navbar-inverse">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
+        </div>
+        <div id="main_nav">
+          <div id="nav">
+            <nav class="navbar navbar-default navbar-inverse">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                  </div>
-                  <div id="content_section_b" class="collapse navbar-collapse">
-                    <ul id="nav" class="dropdown nav navbar-nav">
-                      <li class="">
-                        <a href="about-us.html">Despre Noi</a>
-                      </li>
-                      <li class="">
-                        <a href="portfolio.html">Portofoliu</a>
-                      </li>
-                      <li class="">
-                        <a href="#contact-us">Contact</a>
-                      </li>
-                      <li class="special-btn">
-                       <a href="order.html">Comanda</a>
-                     </li>
-                   </ul>
-                 </div>
-               </div>
-             </nav>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
-   <div class="custom-container pad">
+                </div>
+                <div id="content_section_b" class="collapse navbar-collapse">
+                  <ul id="nav" class="dropdown nav navbar-nav">
+                    <li class="">
+                      <a href="about-us.html">Despre Noi</a>
+                    </li>
+                    <li class="">
+                      <a href="portfolio.html">Portofoliu</a>
+                    </li>
+                    <li class="">
+                      <a href="#contact-us">Contact</a>
+                    </li>
+                    <li>
+                      <a class="special-btn" href="order.html">Comanda</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="custom-container pad">
     <div class="order-section order-page">
-   
-          <h1>Plaseaza-ti comanda in doar cativa pasi simplii!</h1>
-          <h6>Spune-ne cum te putem ajuta.</h6>
-     
-             <div class="row">
+
+      <h1>Plaseaza-ti comanda in doar cativa pasi simplii!</h1>
+      <h6>Spune-ne cum te putem ajuta.</h6>
+
+      <div class="row vertical-align">
         <div class="col-md-8">
-               <span>Am nevoie de</span>
+          <span>Am nevoie de</span>
           <select id="order-input">
             <option value="0" class="blue">Alege din lista.</option>
             <option value="/website-order.html" class="small-select blue">Website</option>
@@ -96,30 +97,41 @@
           </div>
         </div>
         <div class="col-md-4">
-    <div class="logo-slider">
-      <ul class="slides">
-        <li>
-          <img src="images/blanalogo.jpg" alt="">
-          <span class="nothing"></span>
-        </li>
-        <li>
-          <img src="images/dpcbc.jpg" alt="">
-          <span class="nothing"></span>
-        </li>
-        <li>
-          <img src="images/blanalogo.jpg" alt="">
-          <span class="nothing"></span>
-        </li>
-        <li>
-           <img src="images/dpcbc.jpg" alt="">
-          <span class="nothing"></span>
-        </li>
-        <li>
-          <img src="images/blanalogo.jpg" alt="">
-          <span class="nothing"></span>
-        </li>
-      </ul>
-    </div>
+          <div class="logo-slider">
+            <ul class="slides">
+              <!-- 1st - item -->
+              <li>
+                <img src="images/blana-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 2nd - item -->
+              <li>
+                <img src="images/aripau-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 3rd - item -->
+              <li>
+                <img src="images/drdave-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 4th - item -->
+              <li>
+                <img src="images/cg-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 5th - item -->
+              <li>
+                <img src="images/cgbc-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 6th - item -->
+              <li>
+                <img src="images/otbs-order.png" alt="">
+                <span class="nothing"></span>
+              </li>
+              <!-- 7th - item -->
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -128,45 +140,45 @@
   </div>
 
 
-</div>
-<div class="footer-wrapper">
-  <div class="custom-container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="social-media">
-          <a href="">
+  </div>
+  <div class="footer-wrapper">
+    <div class="custom-container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="social-media">
+            <a href="">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="">
+            <a href="">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="">
+            <a href="">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="">
+            <a href="">
             <i class="far fa-envelope"></i>
           </a>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 right">
-        &copy;
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-        </script>
-        2B-studios. All Rights Reserved
+        <div class="col-md-6 right">
+          &copy;
+          <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script>
+          2B-studios. All Rights Reserved
+        </div>
+
       </div>
 
     </div>
-
   </div>
-</div>
 
 
 
-<script src="js/wow.min.js"></script>
-<script>
-  new WOW().init();
-</script>
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
